created all of the html pages and created the header and footers

--- a/index.html
+++ b/index.html
@@ -2,12 +2,65 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>title of site</title>
+		<title>Thames Valley Anglers Association</title>
 		<link href="css/reset.css" rel="stylesheet" type="text/css">
 		<link href="css/main.css" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 	</head>
 	<body>
 
+		<section id="siteContainer"> <h2 class="hidden">Header</h2>
+
+			<header id="mainHeader">
+				<div id="logo">
+					<img src="images/traa_logo.svg" alt="TRAA Logo">
+				</div>
+					<nav id="mainNav">
+						<h2 class="hidden">Main Navigation</h2>
+						<form id="searchForm">
+							<input type="text" placeholder="search">
+						</form>
+						<ul>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="about.html">About</a></li>
+							<li><a href="#">Past Events</a></li>
+							<li><a href="projects.html">Projects</a></li>
+							<li><a href="newsletters.html">Newsletters</a></li>
+							<li><a href="links.html">Links</a></li>
+							<li><a href="contact.html">Contact Us</a></li>
+						</ul>
+					</nav>
+			</header>
+
+			<section id="welcome">
+				<h2>Welcome to the TRAA</h2>
+			</section>
+
+
+			<div id="heroImage">
+				<div class="heroText">
+					<h2>Dedication Today for Tomorrow</h2>
+					<p>"For the enhancement, protection and promotion of a viable, multi-species fishery within the Thames River watershed."</p>
+				</div>
+			</div>
+
+			<footer id="footer">
+				<nav id="footerNav">
+					<h2 class="hidden">Footer Navigation</h2>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="about.html">About</a></li>
+						<li><a href="pastEvents.html">Past Events</a></li>
+						<li><a href="projects.html">Projects</a></li>
+						<li><a href="newsletters.html">Newsletters</a></li>
+						<li><a href="links.html">Links</a></li>
+						<li><a href="contactus.html">Contact Us</a></li>
+					</ul>
+				</nav>
+				<h2 id="copyright">Designed and Created by Graham Vickers and James Pratt®</h2>
+			</footer>
+
+		</section>
 		<script src="js/main.js"></script>
 	</body>
 </html>
