--- a/newsletters.html
+++ b/newsletters.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Newsletters</title>
+		<title>Thames Valley Anglers Association</title>
 		<link href="css/reset.css" rel="stylesheet" type="text/css">
 		<link href="css/main.css" rel="stylesheet" type="text/css">
 	</head>
@@ -13,9 +13,23 @@
 		<section id="siteContainer"> <h2 class="hidden">Header</h2>
 			<header id="mainHeader">
 				<div id="logo">
+					<img src="images/traa_logo.svg" alt="TRAA Logo">
 				</div>
-				<div id="mainNav">
-				</div>
+					<nav id="mainNav">
+						<h2 class="hidden">Main Navigation</h2>
+						<form id="searchForm">
+							<input type="text" placeholder="search">
+						</form>
+						<ul>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="about.html">About</a></li>
+							<li><a href="#">Past Events</a></li>
+							<li><a href="projects.html">Projects</a></li>
+							<li><a href="newsletters.html">Newsletters</a></li>
+							<li><a href="links.html">Links</a></li>
+							<li><a href="contact.html">Contact Us</a></li>
+						</ul>
+					</nav>
 			</header>
 
 			<div id="fullSeperator"></div>
@@ -43,11 +57,20 @@
 
 			<div id="fullSeperator"></div>
 
-			<footer id="mainFooter"><h2 class="hidden">Footer</h2>
-				<div id="footerNav">
-				</div>
-				<div id="copyright">
-				</div>
+			<footer id="footer">
+				<nav id="footerNav">
+					<h2 class="hidden">Footer Navigation</h2>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="about.html">About</a></li>
+						<li><a href="pastEvents.html">Past Events</a></li>
+						<li><a href="projects.html">Projects</a></li>
+						<li><a href="newsletters.html">Newsletters</a></li>
+						<li><a href="links.html">Links</a></li>
+						<li><a href="contactus.html">Contact Us</a></li>
+					</ul>
+				</nav>
+				<h2 id="copyright">Designed and Created by Graham Vickers and James Pratt®</h2>
 			</footer>
 
 			<!-- This is the divider for the top of the fish animation -->
