--- a/about.html
+++ b/about.html
@@ -5,11 +5,12 @@
 		<title>Thames Valley Anglers Association</title>
 		<link href="css/reset.css" rel="stylesheet" type="text/css">
 		<link href="css/main.css" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 	</head>
-
 	<body>
-		<h1 class="hidden">Contact Page</h1>
+
 		<section id="siteContainer"> <h2 class="hidden">Header</h2>
+
 			<header id="mainHeader">
 				<div id="logo">
 					<img src="images/traa_logo.svg" alt="TRAA Logo">
@@ -27,68 +28,16 @@
 							<li><a href="newsletters.html">Newsletters</a></li>
 							<li><a href="links.html">Links</a></li>
 							<li><a href="contact.html">Contact Us</a></li>
-						</ul>
+						</ul>	
 					</nav>
 			</header>
 
-			<section id="contactUs"> <h2 class="hidden">Contact Us</h2>
-				<div id="contactTitle">
-				</div>
-				<div id="fullSeperator">
-				</div>
-				<div id="contactTraa">
-				</div>
-				<div id="contactText">
-				</div>
-				<div id="fullSeperator">
-				</div>
+			<section id="welcome">
+				<h2>Welcome to the TRAA</h2>
 			</section>
 
-			<section id="contactArea"> <h2 class="hidden">Contact Form and Map</h2>
-				<div id="form">
-					<div id="fName">
-					</div>
-					<div id="lName">
-					</div>
-					<div id="address">
-					</div>
-					<div id="address2">
-					</div>
-					<div id="city">
-					</div>
-					<div id="province">
-					</div>
-					<div id="postalcode">
-					</div>
-					<div id="country">
-					</div>
-					<div id="submit">
-					</div>
-				</div>
-				<div id="mapContainer">
-					<div id="mapText">
-					</div>
-					<div id="map">
-					</div>
-				</div>
-			</section>
 
-			<div id="mailWarning">
-			</div>
 
-			<div id="fullSeperator">
-			</div>
-
-			<section id="meeting"> <h2 class="hidden">Genreal Meeting</h2>
-				<div id="meetingTitle">
-				</div>
-				<div id="meetingGuests">
-				</div>
-				<div id="meetingText">
-				</div>
-				<div id="fullSeperator">
-				</div>
-			</section>
 
 			<footer id="footer">
 				<nav id="footerNav">
@@ -106,14 +55,6 @@
 				<h2 id="copyright">Designed and Created by Graham Vickers and James Pratt®</h2>
 			</footer>
 
-			<!-- This is the divider for the top of the fish animation -->
-			<div id="fullSeperator">
-			</div>
-
-			<div id="fishAnimation">
-			</div>
-			<div id="fullSeperator">
-			</div>
 		</section>
 		<script src="js/main.js"></script>
 	</body>
