--- a/links.html
+++ b/links.html
@@ -6,6 +6,7 @@
 		<link href="css/reset.css" rel="stylesheet" type="text/css">
 		<link href="css/main.css" rel="stylesheet" type="text/css">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	</head>
 	<body>
 
@@ -13,7 +14,7 @@
 
 			<header id="mainHeader">
 				<div id="logo">
-					<img src="images/traa_logo.svg" alt="TRAA Logo">
+					<a href="index.html"><img src="images/traa_logo.svg" alt="TRAA Logo"></a>
 				</div>
 					<nav id="mainNav">
 						<h2 class="hidden">Main Navigation</h2>
@@ -54,6 +55,8 @@
 				</nav>
 				<h2 id="copyright">Designed and Created by Graham Vickers and James Pratt®</h2>
 			</footer>
+			<div id="bottomBar">
+			</div>
 
 		</section>
 		<script src="js/main.js"></script>
