--- a/newsletters.html
+++ b/newsletters.html
@@ -5,6 +5,8 @@
 		<title>Thames Valley Anglers Association</title>
 		<link href="css/reset.css" rel="stylesheet" type="text/css">
 		<link href="css/main.css" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	</head>
 
 	<body>
@@ -13,7 +15,7 @@
 		<section id="siteContainer"> <h2 class="hidden">Header</h2>
 			<header id="mainHeader">
 				<div id="logo">
-					<img src="images/traa_logo.svg" alt="TRAA Logo">
+					<a href="index.html"><img src="images/traa_logo.svg" alt="TRAA Logo"></a>
 				</div>
 					<nav id="mainNav">
 						<h2 class="hidden">Main Navigation</h2>
@@ -36,6 +38,7 @@
 
 			<section id="title">
 				<h2 class="hidden">TRAA Newsletters</h2>
+				<p>TRAA Newsletters</p>
 			</section>
 
 			<div id="fullSeperator"></div>
@@ -78,7 +81,7 @@
 			</div>
 			<div id="fishAnimation">
 			</div>
-			<div id="fullSeperator">
+			<div id="bottomBar">
 			</div>
 
 		</section>
