--- a/contact.html
+++ b/contact.html
@@ -119,6 +119,7 @@
 			</div>
 
 			<div id="fishAnimation">
+				<img alt="fish gif" src="images/fish.gif"></img>
 			</div>
 			<div id="bottomBar">
 			</div>
