--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
 				</nav>
 				<h2 id="copyright">Designed and Created by Graham Vickers and James Pratt®</h2>
 			</footer>
+
+			<div id="fullSeperator">
+			</div>
+
+			<div id="fishAnimation">
+				<img alt="fish gif" src="images/fish.gif"></img>
+			</div>
+			
 			<div id="bottomBar">
 			</div>
 
