--- a/newsletters.html
+++ b/newsletters.html
@@ -79,8 +79,11 @@
 			<!-- This is the divider for the top of the fish animation -->
 			<div id="fullSeperator">
 			</div>
+			
 			<div id="fishAnimation">
+				<img alt="fish gif" src="images/fish.gif"></img>
 			</div>
+
 			<div id="bottomBar">
 			</div>
 
