made the projects page

--- a/contact.html
+++ b/contact.html
@@ -35,12 +35,12 @@
 
 			<section id="contactUs"> <h2 class="hidden">Contact Us</h2>
 				<div id="contactTitle">
-					<p>Contact Us</p>
+					<h1>Contact Us</h1>
 				</div>
-				<div id="fullSeperator">
+				<div id="contentBreak">
 				</div>
 				<div id="contactTraa">
-					<p>There's a bunch of ways to get in touch with the TRAA</p>
+					<h2>There's a bunch of ways to get in touch with the TRAA</h2>
 				</div>
 				<div id="contactText">
 					<p>There's a bunch of ways to get in touch with the TRAA.<br>
@@ -48,7 +48,7 @@
 						if you're an individual who would like to become involved with the activities undertaken by the TRAA ...<br>
 						<span style="font-weight:bold; font-size:25px;">the TRAA would like to hear from you.</span></p>
 				</div>
-				<div id="fullSeperator">
+				<div id="contentBreak">
 				</div>
 			</section>
 
@@ -111,7 +111,7 @@
 						<li><a href="contactus.html">Contact Us</a></li>
 					</ul>
 				</nav>
-				<h2 id="copyright">Designed and Created by Graham Vickers and James Pratt®</h2>
+				<h3 id="copyright">Designed and Created by Graham Vickers and James Pratt®</h3>
 			</footer>
 
 			<!-- This is the divider for the top of the fish animation -->
