--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
 				<div id="contactTraa">
 					<h2>There's a bunch of ways to get in touch with the TRAA</h2>
 				</div>
-				<div id="contactText"> 
+				<div id="contactText">
 					<p>There's a bunch of ways to get in touch with the TRAA.<br>
 						If you're with a like-minded organization or group looking for more information on the TRAA and its activities or ...<br>
 						if you're an individual who would like to become involved with the activities undertaken by the TRAA ...<br>
@@ -75,13 +75,20 @@
 				</form>
 				<div id="mapContainer">
 					<div id="mapText">
+						<p><span style="font-weight:bold; font-size:24px;"> Send all those cards and letters (and cheques!) to:</span><br>
+							Thames River Anglers Association<br>
+							2202 Coronation Drive<br>
+							London, Ontario<br>
+							N6G 0B9</p>
 					</div>
 					<div id="map">
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5841.103336985548!2d-81.22376716883079!3d42.9455776267746!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882ef3b01c9e9983%3A0x84558efdb9f3a3a1!2s790+Southdale+Rd+E%2C+London%2C+ON+N6E+1A8!5e0!3m2!1sen!2sca!4v1549347338898" width="550" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 					</div>
 				</div>
 			</section>
 
 			<div id="mailWarning">
+				<p>Please note the adrress listed is only for mail. The location on the map is our general meeting location.</p>
 			</div>
 
 			<div id="fullSeperator">
@@ -89,10 +96,24 @@
 
 			<section id="meeting"> <h2 class="hidden">Genreal Meeting</h2>
 				<div id="meetingTitle">
+					<p>Come talk to us at a TRAA General Meeting</p>
 				</div>
 				<div id="meetingGuests">
+					<p>Guests are welcome!</p>
+
 				</div>
 				<div id="meetingText">
+					<p>The TRAA meets every second Wednesday of each month.
+						 We always try to get the meetings started by 7:00pm
+						 so try to be there a few minutes beforehand.
+						 The venue is the Western Ontario Fish & Game Protective
+						 Association's clubhouse located just east of the Dearness
+						 Home on Southdale Road (East), on the North side of Southdale Road.
+						 The address is 790 Southdale Road East, London, Ontario.<br><br>
+						 Note: Every now and then we have "off-site" meetings.
+						 For example, the July and August meetings are "fishing
+						 meetings" so we won't be at WOFGPA clubhouse. Stay on
+						 top of these changes by visiting this Web site often.
 				</div>
 				<div id="fullSeperator">
 				</div>
