started the about page

--- a/about.html
+++ b/about.html
@@ -11,7 +11,8 @@
 	</head>
 	<body>
 
-		<section id="siteContainer"> <h2 class="hidden">Header</h2>
+		<section id="siteContainer">
+			<h2 class="hidden">TRAA</h2>
 
 			<header id="mainHeader">
 				<div id="logo">
@@ -35,11 +36,40 @@
 			</header>
 
 			<section id="welcome">
-				<h2>Welcome to the TRAA</h2>
+				<h1>About the TRAA</h1>
 			</section>
 
+			<div id="contentBreak"></div>
 
+			<section id="intro">
+				<h2>The TRAA Works at a Grassroots Level Within the Thames River Watershed to:</h2>
+				<p>Protect, enhance and regenerate a viable, multi-species, year-round fishery.promote and participate in environmental clean-up, pollution control and rehabilitation. Breed, relocate and stock to re-establish or augment appropriate species of fish. Promote environmentally sound sport fishing practices. Form partnerships with community businesses, government agencies, special interest groups, landowners, and other stakeholders in the Thames River watershed. Increase public awareness of the unique diversity of the Thames River Watershed, its challenges, its recreational opportunities and its vital importance to our community.</p>
+			</section>
 
+			<div id="contentBreak"></div>
+
+			<section>
+				<h2>More About the TRAA</h2>
+				<section id="about1">
+					<div id="aboutImg1">
+						<img src="images/holding_fish.jpg" alt="Man holding fish">
+					</div>
+					<div id="aboutDesc1">
+						<p>In the spring of 1986 the TRAA was formed by anglers concerned with the state of the fishery in the Thames River watershed, particularly the dwindling smallmouth bass population in the North Thames River. sThe TRAA is not a fishing club, although most members are anglers and share fishing as a common interest. We are a "hands on" environmental group who likes to work at a grass roots level.</p>
+					</div>
+				</section>
+
+				<section id="about2">
+					<div id="aboutDesc2">
+						<p>The TRAA is a volunteer organization, governed by a formal constitution and by-laws. An elected Executive, with the guidence of the General Membership, sets the policies and direction for the TRAA. The TRAA has a history of always having a core group of active members supported by those who just want to be part of the solution. Either way, every member of the TRAA is active in their advocacy for the health of the Thames River watershed and its inhbitants.</p>
+					</div>
+					<div id="aboutImg2">
+						<img src="images/man_in_water.jpg" alt="Man in Water">
+					</div>
+				</section>
+			</section>
+
+			<div id="contentBreak"></div>
 
 			<footer id="footer">
 				<nav id="footerNav">
