almost finished the about

--- a/contact.html
+++ b/contact.html
@@ -91,10 +91,10 @@
 				<p>Please note the adrress listed is only for mail. The location on the map is our general meeting location.</p>
 			</div>
 
-			<div id="fullSeperator">
-			</div>
+			<div id="contentBreak"></div>
 
-			<section id="meeting"> <h2 class="hidden">Genreal Meeting</h2>
+			<section id="meeting">
+				<h2 class="hidden">Genreal Meeting</h2>
 				<div id="meetingTitle">
 					<p>Come talk to us at a TRAA General Meeting</p>
 				</div>
@@ -115,7 +115,7 @@
 						 meetings" so we won't be at WOFGPA clubhouse. Stay on
 						 top of these changes by visiting this Web site often.
 				</div>
-				<div id="fullSeperator">
+				<div id="contentBreak">
 				</div>
 			</section>
 
