--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
 	</head>
-	
+
 	<body>
 
 		<section id="siteContainer">
@@ -71,6 +71,53 @@
 			</section>
 
 			<div id="contentBreak"></div>
+
+			<section>
+				<h2>Local Businesses Step Up to Help Out the TRAA</h2>
+
+				<div id="businesses1">
+					<div id="contentBox">
+						<img src="images/melchers.png" alt="Melchers Construction Logo">
+						<p>Over the past couple of years the folks at Melchers Construction Ltd have offered up their beautiful boardroom for TRAA executive meetings. It's an ideal space with all the amenities required for us to accomplish all the "behind the scenes" work of the TRAA. Many thanks go out to the continued support of Melchers Construction Ltd.</p>
+					</div>
+					<div id="contentBox">
+						<img src="images/guillevin.png" alt="Guillevin International Logo">
+						<p>Members of the trout hatchery rotation know the woes we've had with lighting in the hatchery. Even with larger fixtures installed a few years ago, it was still frustrating on days when the mercury dipped below -15C and the fluorescent technology just teased us with its dull flicker. Enter Mike Jeffries of Guillevin Greentech in London with nice set of bright and dependable (and new!) LED fixtures. Once they were installed it was like working in well-appointed laboratory.</p>
+					</div>
+					<div id="contentBox">
+						<img src="images/muma.png" alt="Muma Manufacturing Logo">
+						<p>The TRAA voted unanimously to re-name the TRAA trout hatchery honouring Keith Wales' memory and his unselfish support of the TRAA's work in the London area, in particular Komoka Creek. Special thanks go out to Muma Manufacturing in St. Thomas for donating the beautiful laser-cut aluminum sign.</p>
+					</div>
+				</div>
+
+				<div id="businesses2">
+					<div id="contentBox">
+						<img src="images/try_recycling.png" alt="Try Recycling Inc. Logo" >
+						<p>After cleaning up the area around the TRAA shed and trout hatchery, our trailer was quite full and needed to be emptied. A big 'thank you' goes out to Rick Vandersluis and Mike Seabrook of Try Recycling who allowed the TRAA to empty the trailer at their facility free of charge.</p>
+					</div>
+					<div id="contentBox">
+						<img src="images/angling_sports.png" alt="Angling Sports Logo" class="businessLogo">
+						<p>Before we could take the trailer to Try Recycling, we needed to get the spare tire for the trailer fixed. Pat Devincenzo, proprietor of Angling Sports, offered to get it repaired. Turns out the tire needed replacing and Pat took care of it.
+							Angling Sports also supplied cards for all TRAA members that entitle them to a discount equal to the tax on anything in the store. Thanks Pat, your generosity is greatly appreciated.</p>
+					</div>
+				</div>
+			</section>
+
+			<div id="contentBreak"></div>
+
+			<section>
+				<h2>TRAA Positions</h2>
+				<div id="positions">
+					<div id="executives">
+						<h3>TRAA Executives</h3>
+
+					</div>
+					<div id="volunteers">
+						<h3>TRAA Volunteer Chairs</h3>
+
+					</div>
+				</div>
+			</section>
 
 			<footer id="footer">
 				<nav id="footerNav">
