--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	</head>
-	
+
 	<body>
 
 		<section id="siteContainer"> <h2 class="hidden">Header</h2>
@@ -53,7 +53,7 @@
 					<h2 class="hidden">Salmonid Project</h2>
 					<div id="salmonProj">
 						<h3>Salmonid Monitoring Program</h3>
-						<p>Spring 2013 will be our fourth year of this 5-year project. Here's an overview of what happened over a few weekends in the  Spring of 2012 when TRAA members and personnel from the Upper  Thames River Conservation Authority (UTRCA) waded in for Year 3  of our 5-year Salmonid Tagging and Monitoring Program ...read more</p>
+						<p>Spring 2013 will be our fourth year of this 5-year project. Here's an overview of what happened over a few weekends in the  Spring of 2012 when TRAA members and personnel from the Upper  Thames River Conservation Authority (UTRCA) waded in for Year 3  of our 5-year Salmonid Tagging and Monitoring Program... <a href="#">read more</a></p>
 					</div>
 					<div id="projectImg1">
 						<img src="images/man_in_water.jpg" alt="Man in water">
@@ -67,7 +67,7 @@
 					</div>
 					<div id="troutProj">
 						<h3>TRAA Trout Hatchery<br>Rearing both brown and rainbow trout</h3>
-						<p>The TRAA first began rearing rainbow trout in an outdoor upwelling incubation box back in 1986. Since then we've successfully taken on both brown trout and brook trout eggs... read more</p>
+						<p>The TRAA first began rearing rainbow trout in an outdoor upwelling incubation box back in 1986. Since then we've successfully taken on both brown trout and brook trout eggs... <a href="#">read more</a></p>
 					</div>
 				</section>
 			</section>
@@ -76,8 +76,8 @@
 
 			<section id="archiveProj">
 				<h2>Project Archieves</h2>
-				<p><a>Walleye Hatchery</a></p>
-				<p><a>Stream Rehabilitation</a></p>
+				<p><a href="#">Walleye Hatchery</a></p>
+				<p><a href="#">Stream Rehabilitation</a></p>
 			</section>
 
 			<footer id="footer">
