finshed about, almost done index

--- a/about.html
+++ b/about.html
@@ -110,11 +110,42 @@
 				<div id="positions">
 					<div id="executives">
 						<h3>TRAA Executives</h3>
-
+						<p>President</p>
+						<h4>Rob Huber</h4>
+						<p>Vice President</p>
+						<h4>Paul Holmes</h4>
+						<p>Secretary</p>
+						<h4>Jeremy Beaton</h4>
+						<p>Treasurer</p>
+						<h4>Randy Bailey</h4>
+						<p>Chairperson</p>
+						<h4>Adam Bengen</h4>
 					</div>
+
 					<div id="volunteers">
 						<h3>TRAA Volunteer Chairs</h3>
+						<div id="volunteerSplit">
+							<div>
+							<p>Trout</p>
+								<h4>Dan Schinkelshoek</h4>
+								<p>Warmwater</p>
+								<h4>Pud Hunter</h4>
+								<p>Habitat</p>
+								<h4>Jeremey Beaton</h4>
+								<h4>Paul Holmes</h4>
+								<h4>Randy Bailey</h4>
+							</div>
 
+							<div>
+								<p>Public Relations</p>
+								<h4>Rob Huber</h4>
+								<h4>Randy Bailey</h4>
+								<h4>Paul Noble</h4>
+								<p>Hatchery Management</p>
+								<h4>Adam Bengen</h4>
+								<h4>Randy Bailey</h4>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
