--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	</head>
-	
-	<body>
 
+	<body>
 		<section id="siteContainer"> <h2 class="hidden">Header</h2>
 
 			<header id="mainHeader">
@@ -35,16 +34,68 @@
 			</header>
 
 			<section id="welcome">
-				<h2>Welcome to the TRAA</h2>
+				<h1>Welcome to the TRAA</h1>
 			</section>
 
 
 			<div id="heroImage">
-				<div class="heroText">
+				<div id="heroText">
 					<h2>Dedication Today for Tomorrow</h2>
 					<p>"For the enhancement, protection and promotion of a viable, multi-species fishery within the Thames River watershed."</p>
 				</div>
 			</div>
+
+			<div id="contentBreak"></div>
+
+			<section id="meeting">
+				<h2>TRAA General Meeting</h2>
+				<h3>7:00PM - Wednesday January 9, 2019</h3>
+				<div id="meetingContent">
+				<img src="images/map.jpg" alt="Map for Meeting">
+				<p>Happy New Year!<br>As part of the new you for 2019 why not start coming out to TRAA General Meetings. That way you're up on the latest details on TRAA news, plans and events. Also note that with the New Year, it is time to renew your TRAA membership if you haven't already! As always, guests are always welcome. If you're not a member feel free to drop in and check out what the TRAA is all about. We meet at the Western Ontario Fish & Game Protective Association clubhouse at 790 Southdale Road, London Ontario.</p>
+			</section>
+
+			<div id="contentBreak"></div>
+
+			<section id="contentBody1">
+				<div id="contentBox">
+					<h3>Memberships are Due!</h3>
+					<img src="images/membership.png" alt="Member badge">
+					<p>YOU GET TO BE A TRAA MEMBER FOR A WHOLE YEAR FOR ONLY  $25.00. Your membership also adds another voice to our efforts in protecting and enhancing aquatic habitats in the London & area community. YOU'VE TAKEN A LOT OF ENJOYMENT FROM THIS UNIQUE FISHERY. IT'S TIME TO GIVE BACK BY BEING PART OF THE SOLUTION.</p>
+				</div>
+				<div id="contentBox">
+					<h3>Fundraising</h3>
+					<img src="images/Fundraising-01.png" alt="">
+					<p>Efforts are underway to get the moeny we need to continue many of the TRAA's most vital projects: <br>Improvements to the Trout Hatchery <br>Continuation to the Salmonid Montitoring Program<br>Komoka Creek  Hydrological Study <br>Please  email us  if  you'd like to take  an active role in  raising the funds  needed for these  and other important TRAA activities.</p>
+				</div>
+				<div id="contentBox">
+					<h3>TRAA Gear</h3>
+					<p>Available now!</p>
+					<img src="" alt="">
+					<img src="" alt="">
+				</div>
+			</section>
+
+			<div id="contentBreak"></div>
+
+			<section id="contentBody2">
+				<div id="contentBox2">
+					<h3>Trout Hatchery</h3>
+					<img src="" alt="">
+					<p>The TRAA trout hatchery is a popular activity of the TRAA as it's a great teaching tool with regard to the life cycle of a trout. Those involved with the hatchery get to see firsthand the development stages of the egg and the fry before their final release destinations to area streams.</p>
+					<p>Volunteers attend to the operation every day to maintain the health and well-being of the trout. As the saying goes, many hands make light work.</p>
+					<p>There are ideally 2 members assigned for each day of the week. This is desirable as they can cover for each other and also allows us to match up anyone wanting to "learn the ropes" with an experienced mentor.</p>
+					<p>At this time there are still openings those wanting to be a part of the trout hatchery rotation. You can Contact Us or attend a TRAA General Meeting (see above) for more info.</p>
+				</div>
+				<div id="contentBox2">
+					<h3>Rod Building</h3>
+					<img src="" alt="">
+					<p>This will be a series of informal, hands-on sessions that will result in a spinning or fly rod that you have assembled and finished yourself.</p>
+					<p>This opportunity is open only to current members of the TRAA, WOFGPA and/or FCFFC. Registration will be closed when 15 paid-up participants have registered, or January 11, 2019, whichever comes first. An email with further details has been sent out. If you haven't received this email by Wednesday, December 19th, please  Contact Us.</p>
+					<p>Presented by: Thames River Anglers Association with the Western Ontario Fish & Game Protective Ass’n and the Forest City Fly Fishing Club.</p>
+					<p>The Western Ontario Fish & Game Protective Association clubhouse is at 790 Southdale Road, London Ontario.</p>
+				</div>
+			</section>
 
 			<footer id="footer">
 				<nav id="footerNav">
