finsihed home and created some new clicks and styles

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
 				<h2>More About the TRAA</h2>
 				<section id="about1">
 					<div id="aboutImg1">
-						<img src="images/holding_fish.jpg" alt="Man holding fish">
+						<img src="images/river_fishing.jpg" alt="Man holding fish">
 					</div>
 					<div id="aboutDesc1">
 						<p>In the spring of 1986 the TRAA was formed by anglers concerned with the state of the fishery in the Thames River watershed, particularly the dwindling smallmouth bass population in the North Thames River. sThe TRAA is not a fishing club, although most members are anglers and share fishing as a common interest. We are a "hands on" environmental group who likes to work at a grass roots level.</p>
