--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
 				<section id="projects2">
 					<h2 class="hidden">Trout Project</h2>
 					<div id="projectImg2">
-						<img src="images/holding_fish.jpg" alt="Man holding trout">
+						<img src="images/man_and_son.jpg" alt="Man reaching for Trout">
 					</div>
 					<div id="troutProj">
 						<h3>TRAA Trout Hatchery<br>Rearing both brown and rainbow trout</h3>
