fixed some bugs and started the newletters page

--- a/contact.html
+++ b/contact.html
@@ -33,12 +33,14 @@
 					</nav>
 			</header>
 
-			<section id="contactUs"> <h2 class="hidden">Contact Us</h2>
-				<div id="contactTitle">
-					<h1>Contact Us</h1>
-				</div>
-				<div id="contentBreak">
-				</div>
+			<section id="welcome">
+				<h2>Contact Us</h2>
+			</section>
+
+			<div id="contentBreak"></div>
+
+			<section id="contactUs">
+				<h2 class="hidden">How to contact the TRAA</h2>
 				<div id="contactTraa">
 					<h2>There's a bunch of ways to get in touch with the TRAA</h2>
 				</div>
