--- a/links.html
+++ b/links.html
@@ -8,7 +8,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	</head>
-	
+
 	<body>
 
 		<section id="siteContainer"> <h2 class="hidden">Header</h2>
@@ -35,11 +35,10 @@
 			</header>
 
 			<section id="welcome">
-				<h2>Welcome to the TRAA</h2>
+				<h2>TRAA Links</h2>
 			</section>
 
-
-
+			<div id="contentBreak"></div>
 
 			<footer id="footer">
 				<nav id="footerNav">
