--- a/newsletters.html
+++ b/newsletters.html
@@ -34,31 +34,34 @@
 					</nav>
 			</header>
 
-			<div id="fullSeperator"></div>
-
-			<section id="title">
-				<h2 class="hidden">TRAA Newsletters</h2>
-				<p>TRAA Newsletters</p>
+			<section id="welcome">
+				<h2>TRAA Newsletters</h2>
 			</section>
 
-			<div id="fullSeperator"></div>
+			<div id="contentBreak"></div>
 
 			<section id="intro">
-				<h2 class="hidden">Newsletters have evolved over the years</h2>
-				<div id="introH2"></div>
-				<div id="introP"></div>
+				<h2 class="hidden">intro to TRAA Newsletters</h2>
+				<div id="introH2">
+					<h2>The TRAA Newsletters have evolved over the years</h2>
+				</div>
+				<div id="introP">
+					<p>The first newsletters were banged out manually on a typewriter and then copied about 100 times for distribution. These initial efforts were simple (no pictures or colour!)</p>
+					<p>but they did the job. The latest versions are electronic, emailed to members and other TRAA friends. They feature nice formatting, pictures and yes, colour! The greatest challenge over the years has been getting editions published on time (or at all!). Such is life within a volunteer organization like the TRAA; you have to focus your energies on where they are most effective and a newsletter falls further down that priority list.</p>
+				</div>
 			</section>
 
-			<div id="fullSeperator"></div>
+			<div id="contentBreak"></div>
 
 			<section id="archive">
-				<h2 class="hidden">TRAA Newsletters</h2>
-				<div id="archiveH2"></div>
-				<div id="boxRight"></div>
-				<div id="boxLeft"></div>
+				<h2>Take a stroll down memory lane by browsing through the TRAA Newsletter archive...<h2>
+				<div id="newsletters">
+					<div id="boxRight">
+					</div>
+					<div id="boxLeft">
+					</div>
+				</div>
 			</section>
-
-			<div id="fullSeperator"></div>
 
 			<footer id="footer">
 				<nav id="footerNav">
