--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			</header>
 
 			<section id="welcome">
-				<h1>Welcome to the TRAA</h1>
+				<h2>Welcome to the Thames River Anglers Accosiation</h2>
 			</section>
 
 
