finished the links page with fully working links and Webmaster mail function.

--- a/links.html
+++ b/links.html
@@ -36,6 +36,108 @@
 
 			<section id="welcome">
 				<h2>TRAA Links</h2>
+				<p id="badJoke">Sites of Interest to the 'ConserFishinist'</p>
+			</section>
+
+			<div id="contentBreak"></div>
+
+			<section id=links>
+				<div id="linkType1">
+					<h3 id="linkTitle">Conservation</h3>
+					<p id="linkText"><a href="https://caroliniancanada.ca/"target="_blank">Carolinian Canada</a> - Carolinian Canada’s
+						diverse network advances a strategic ‘Big Picture’ vision for healthy
+						landscapes and a green future in Canada’s deep south.</p>
+					<p id="linkText"><a href="http://thamesrivercleanup.ca/default.htm"target="_blank">Friends of the Thames / Thames River Cleanup</a> - The Friends of the Thames
+						has been organising and promoting the Annual Thames River Cleanup every spring for the past 14 years.Environmentally
+						concerned volunteers, landowners, clubs, organizations and municipalities have come together during Earth week to
+						help clean up portions of the Thames River watershed areas.Check out their Contacts page to find out who or
+						what organization is cleaning up your favourite section of the Thames River.</p>
+					<p id="linkText"><a href="http://www.naturelondon.com/"target="_blank">Nature London</a> - Nature London undertakes a variety of projects to promote
+						environmental awareness, enhance habitat and protect natural areas. MFN members participate in the
+						Christmas Bird Count, the annual Butterfly Count and other initiatives which encourage the study of local
+						natural history.</p>
+					<p id="linkText"><a href="https://www.northshoresteelhead.com/"target="_blank">North Shore Steelhead Association</a> - The primary concern of the founding
+						members was the protection and enhancement of the north shore migratory Rainbow Trout (Steelhead) fishery,
+						but their foresight led to the inclusion of all coldwater species in our constitution. This, by default,
+						includes all species that use Lake Superior tributaries in their life cycle.</p>
+					<p id="linkText"><a href="https://www.ontariostreams.on.ca/"target="_blank">Ontario Streams</a> - To promote the protection and rehabilitation of Ontario's
+						rivers and streams through education and community action.</p>
+					<p id="linkText"><a href="https://www.ofah.org/"target="_blank">Ontario Federation of Anglers and Hunters</a> - You may think you know who they
+						are and what they do, but check the site, you may be surprised!</p>
+					<p id="linkText"><a href="https://tucanada.org/"target="_blank">Trout Unlimited Canada</a> - To conserve, protect and restore Canada's freshwater
+						resources and their watersheds for current and future generations.</p>
+				</div>
+
+
+
+<!-- CHANGE THIS TO LIST ITEMS -->
+				<div id="linkType2">
+					<h3 id="linkTitle">Conservation Authorities</h3>
+					<p id="linkText"><a href="http://www.abca.on.ca/"target="_blank">Ausable Bayfield Conservation Authority</a></p>
+					<p id="linkText"><a href="http://www.creditvalleycons.com/"target="_blank">Credit Valley Conservation Authority</a></p>
+					<p id="linkText"><a href="https://essexregionconservation.ca/"target="_blank">Essex Region Conservation Authority</a></p>
+					<p id="linkText"><a href="https://www.grandriver.ca/en/index.aspx"target="_blank">Grand River Conservation Authority</a></p>
+					<p id="linkText"><a href="https://www.conservationhalton.ca/"target="_blank">Halton Region Conservation Authority</a></p>
+					<p id="linkText"><a href="http://conservationhamilton.ca/"target="_blank">Hamilton Region Conservation Authority</a></p>
+					<p id="linkText"><a href="http://www.lprca.on.ca/"target="_blank">Long Point Region Conservation Authority</a></p>
+					<p id="linkText"><a href="https://lakeheadca.com/"target="_blank">Lakehead Region Conservation Authority</a></p>
+					<p id="linkText"><a href="https://www.lowerthames-conservation.on.ca/"target="_blank">Lower Thames Valley Conservation Authority</a></p>
+					<p id="linkText"><a href="https://trca.ca/?src=trca.on.ca"target="_blank">Metro Toronto & Region Conservation Authority</a></p>
+					<p id="linkText"><a href="https://www.rvca.ca/"target="_blank">Rideau Valley Conservation Authority</a></p>
+					<p id="linkText"><a href="https://www.scrca.on.ca/"target="_blank">St.Clair Region Conservation Authority</a></p>
+					<p id="linkText"><a href="http://thamesriver.on.ca/"target="_blank">Upper Thames River Conservation Authority</a></p>
+				</div>
+
+				<div id="linkType1">
+					<h3 id="linkTitle">Government Entities</h3>
+					<p id="linkText"><a href="https://www.ontario.ca/page/ministry-natural-resources-and-forestry"target="_blank">Ontario Ministry of Natural Resources</a></p>
+					<p id="linkText"><a href="https://www.ontario.ca/page/ministry-environment-conservation-parks"target="_blank">Ontario Ministry of the Environment</a></p>
+				</div>
+
+				<div id="linkType2">
+					<h3 id="linkTitle">Support These Local Fishing and Related Retailers</h3>
+					<p id="linkText"><a href="https://anglingsports.ca/index.html"target="_blank">Angling Sports</a> - 681 Highbury Ave N, London, ON N5W 4L4 (519-649-7429)</p>
+					<p id="linkText"><a href="https://www.facebook.com/pages/Lambeth-Rod-Tackle/536092689905331"target="_blank">Lambeth Rod & Tackle</a> - 2404 Main Street, London, ON N6P 1R2 (519-652-5598)</p>
+					<p id="linkText"><a href="https://www.freewebs.com/johnsflymaterials/"target="_blank">John's Fly Materials</a> - 96 Rectory Street, London, ON N5Z 1Z9 (226-270-9029)</p>
+					<p id="linkText"><a href="https://www.facebook.com/AnglingOutfitters/"target="_blank">Angling Outfitters</a> - 684460 Road 68, Woodstock, ON N4S 7V7 (519-539-5494)</p>
+				</div>
+
+				<div id="linkType1">
+					<h3 id="linkTitle">Fishing and Related Links</h3>
+					<p id="linkText"><a href="http://www3.sympatico.ca/ianjames/"target="_blank">Ian Colin James</a> - This late great great friend of the Thames River
+						and the TRAA was a Fly Fisherman, Tyer, Guide, Instructor, Author, College Prof', Artist, Raconteur,
+						and Man About Town.</p>
+					<p id="linkText"><a href="http://www.wofgpa.org/"target="_blank">Western Ontario Fish & Game Protective Association</a> - Quite likely the
+						oldest and still one of the most viable conservation clubs in the London area. It's also where the
+						TRAA holds their meetings.</p>
+					<p id="linkText"><a href="http://www.fcfc.ca/index.html"target="_blank">Forest City Fly Fishing Club</a> - Learn everything about all things fly
+						fishing. Also great friends and supporters of the TRAA.</p>
+					<p id="linkText"><a href="http://forestcitybassmasters.com/"target="_blank">Forest City Bassmasters</a> - Activities include hosting fishing
+						tournaments, guest speakers and events, and conservation activities with a focus on fun, friendship,
+						learning and friendly competition.</p>
+					<p id="linkText"><a href="https://wateroffice.ec.gc.ca/google_map/google_map_e.html"target="_blank">Real-Time Hydrometric Data</a> - Explore real-time river levels and flows
+						(discharges) before you plan your fishing or canoe/kayak trip.</p>
+					<p id="linkText"><a href="https://www.matchanglingclub.com/"target="_blank">Match Angling Club of Ontario</a> - An interesting site with lots of info'
+						on match angling, a growing aspect of our sport in North America.</p>
+					<p id="linkText"><a href="https://sffcl.com/"target="_blank">SOTTO Fly Fishing Club</a> - This club organizes a series of fun fly fishing
+						competitions across Ontario, one of which is the Thames River Open.</p>
+					<p id="linkText"><a href="https://thamesriverpaddlingroutes.webs.com/"target="_blank">Thames River Paddling Routes</a> - The aim of this website is to create a single
+						source for accessing information for paddling the Thames River.</p>
+				</div>
+
+				<div id="linkType2">
+					<h3 id="linkTitle">PLEASE NOTE</h3>
+					<p id="linkText">The links appearing on this page have been included for the interest of
+						TRAA members and other like-minded individuals. We do our best to monitor what these
+						sites offer as content. If you are concerned with any aspect of any of the linked sites,
+						please contact the <a href="mailto:traa@anglers.org">Webmaster</a>. Sites linked to this page that are deemed unsuitable for
+						any reason at the sole discretion of the TRAA, will be removed without notice or explanation.
+						Like-minded organizations wishing to have their sites linked to this page may contact the <a href="mailto:traa@anglers.org">Webmaster.</a>.
+						Your site's suitability for linking to this page is a decision made solely and strictly by the TRAA.</p>
+
+				</div>
+
+
 			</section>
 
 			<div id="contentBreak"></div>
