--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,8 @@
 					<p>There's a bunch of ways to get in touch with the TRAA.<br>
 						If you're with a like-minded organization or group looking for more information on the TRAA and its activities or ...<br>
 						if you're an individual who would like to become involved with the activities undertaken by the TRAA ...<br>
-						<span style="font-weight:bold; font-size:25px;">the TRAA would like to hear from you.</span></p>
+						</p>
+						<p id="hearTRAA">the TRAA would like to hear from you.</p>
 				</div>
 				<div id="contentBreak">
 				</div>
