--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
 						<img src="images/try_recycling.png" alt="Try Recycling Inc. Logo" >
 						<p>After cleaning up the area around the TRAA shed and trout hatchery, our trailer was quite full and needed to be emptied. A big 'thank you' goes out to Rick Vandersluis and Mike Seabrook of Try Recycling who allowed the TRAA to empty the trailer at their facility free of charge.</p>
 					</div>
-					<div id="contentBox">
+					<div id="contentBoxAngling">
 						<img src="images/angling_sports.png" alt="Angling Sports Logo" class="businessLogo">
 						<p>Before we could take the trailer to Try Recycling, we needed to get the spare tire for the trailer fixed. Pat Devincenzo, proprietor of Angling Sports, offered to get it repaired. Turns out the tire needed replacing and Pat took care of it.
 							Angling Sports also supplied cards for all TRAA members that entitle them to a discount equal to the tax on anything in the store. Thanks Pat, your generosity is greatly appreciated.</p>
