--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
 							N6G 0B9</p>
 					</div>
 					<div id="map">
-						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5841.103336985548!2d-81.22376716883079!3d42.9455776267746!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882ef3b01c9e9983%3A0x84558efdb9f3a3a1!2s790+Southdale+Rd+E%2C+London%2C+ON+N6E+1A8!5e0!3m2!1sen!2sca!4v1549347338898" width="550" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5841.103336985548!2d-81.22376716883079!3d42.9455776267746!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882ef3b01c9e9983%3A0x84558efdb9f3a3a1!2s790+Southdale+Rd+E%2C+London%2C+ON+N6E+1A8!5e0!3m2!1sen!2sca!4v1549347338898" width="550" height="300" frameborder="0" style="border:0;" allowfullscreen></iframe>
 					</div>
 				</div>
 			</section>
