finished the newsletters page

--- a/newsletters.html
+++ b/newsletters.html
@@ -56,10 +56,35 @@
 			<section id="archive">
 				<h2>Take a stroll down memory lane by browsing through the TRAA Newsletter archive...<h2>
 				<div id="newsletters">
-					<div id="boxRight">
-					</div>
+
 					<div id="boxLeft">
+						<h3>1900's Newsletters</h3>
+						<div id="newslettersLeft">
+							<h4><a href="#">1999</a></h4>
+							<h4><a href="#">1997</a></h4>
+							<h4><a href="#">1996</a></h4>
+							<h4><a href="#">1986</a></h4>
+						</div>
 					</div>
+
+					<div id="boxRight">
+						<h3>2000's Newsletters</h3>
+						<div id="newslettersRight">
+							<h4><a href="#">2011</a></h4>
+							<h4><a href="#">2010</a></h4>
+							<h4><a href="#">2009</a></h4>
+							<h4><a href="#">2008</a></h4>
+							<h4><a href="#">2007</a></h4>
+							<h4><a href="#">2006</a></h4>
+							<h4><a href="#">2005</a></h4>
+							<h4><a href="#">2004</a></h4>
+							<h4><a href="#">2003</a></h4>
+							<h4><a href="#">2002</a></h4>
+							<h4><a href="#">2001</a></h4>
+							<h4><a href="#">2000</a></h4>
+						</div>
+					</div>
+
 				</div>
 			</section>
 
